# config-ninja

./: .envrc  .flake8  .gitignore  .mdlrc  .pre-commit-config.yaml  .readthedocs.yaml  .taplo.toml  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  config-ninja-settings.yaml  ptw.ini  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  propose_enhancement.md
.github/actions/poe/: action.yaml  action.yml
.github/workflows/: codeql.yml  dependabot-merge.yaml  pr-poe-skipped.yaml  pr-poe.yaml  pr-poe.yml  push-poe.yaml  push-poe.yml
changelog/: CHANGELOG.md.j2
examples/: appconfig-backend.yaml  hooks.yaml  local-backend.yaml  logging.yaml  secretsmanager-backend.yaml
src/: pyspry.pyi  sdnotify.pyi  sh.pyi
src/config_ninja/: __init__.py  __main__.py  backend.py  cli.md  cli.py  conftest.py  controller.py  hooks.py  settings.py  systemd.py
src/config_ninja/contrib/: __init__.py  appconfig.py  local.py  secretsmanager.py
src/config_ninja/settings/: __init__.py  poe.py  schema.py
src/config_ninja/templates/: systemd.service.j2
src/poethepoet/: __init__.pyi  context.pyi  exceptions.pyi  options.pyi  ruff.toml  ui.pyi  virtualenv.pyi
src/poethepoet/config/: __init__.pyi  config.pyi  file.pyi  partition.pyi
src/poethepoet/env/: cache.pyi  manager.pyi  parse.pyi  template.pyi
src/poethepoet/executor/: __init__.pyi  base.pyi  poetry.pyi  simple.pyi  virtualenv.pyi
src/poethepoet/helpers/: __init__.pyi  python.pyi
src/poethepoet/task/: __init__.pyi  args.pyi  base.pyi  cmd.pyi  expr.pyi  graph.pyi  ref.pyi  script.pyi  sequence.pyi  shell.pyi  switch.pyi
templates/: CHANGELOG.md.j2  settings-subset.toml.j2
tests/: __init__.py  fixtures.py  ruff.toml
tests/acceptance/: test_1088.py  test_619.py  test_620.py
tests/test_config_ninja/: test_cli.py  test_main.py
tests/test_tools/: test_install.py
tools/: __init__.py  conftest.py  install.py  ruff.toml
